[project]
name = "sine"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "s7ev3n", email = "s.eleven.73@gmail.com" }
]
dependencies = [
    "numpy>=1.26.4",
    "openai>=1.14.2",
    "setuptools>=69.2.0",
    "pytest>=8.1.1",
    "griffe>=0.42.1",
    "phx-class-registry>=4.1.0",
    "groq>=0.5.0",
    "zhipuai>=2.0.1",
    "requests>=2.31.0",
    "bs4>=0.0.2",
    "streamlit>=1.33.0",
    "yarl>=1.9.4",
    "streamlit-shadcn-ui>=0.1.18",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sine"]
